@@ -1,0 +1,6 @@
+config BR2_PACKAGE_NETPERF
+	bool "netperf"
+	help
+	  Network performance benchmark tool
+
+	  http://www.netperf.org/
